[package]
name = "airrohr-mqtt"
version = "0.1.0"
edition = "2021"
authors = ["Johannes Kliemann <jk@jkliemann.de>"]
description = "Homeassistant compatible mqtt bridge for the Airrohr air sensor."
readme = "README.md"
repository = "https://github.com/jklmnn/airrohr-mqtt"
license = "Apache-2.0"
keywords = ["mqtt", "iot", "homeassistant"]
exclude = ["images/"]

[dependencies]
rocket = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
paho-mqtt = "0.13"
config = "0.15"
